--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -56,5 +56,5 @@
         "temp/": true,
         "Temp/": true
     },
-    "dotnet.defaultSolution": "RPG Combat System (ATB w GridSystem).sln"
+    "dotnet.defaultSolution": "TeamSeaBunny---RPG-Experimental-Combat-System--ATB-.sln"
 }
